# style_transferring_server

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
config/: styles.json
docs/: apis.md  how_to_present.md  raw_req.md  runtime_config.md  风格迁移项目API文档.md
src/style_transferring_server/: app.py  cli.py  config.py  constants.py  custom_styles.py  logging_config.py  responses.py  schemas.py  styles.py  transfer.py
tests/: conftest.py  test_api_contract.py  test_config.py
