[project]
name = "style-transferring-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
style-transferring-server = "style_transferring_server.cli:main"

[tool.uv.sources]
torch = { index = "pytorch_cu130" }
torchaudio = { index = "pytorch_cu130" }
torchvision = { index = "pytorch_cu130" }

[[tool.uv.index]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch_cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "httpx2>=2.5.0", "mypy>=2.2.0"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
exclude = ["references", "tests"]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_calls = true
strict_equality = true
